apps/mssql-app/manifest4.3.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: mssql-deployment
  namespace: mssql-persistent
  labels:
    app: mssql
spec:
  replicas: 1
  selector:
    name: mssql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: mssql
        app: mssql
    spec:
      serviceAccountName: mssql-persistent-sa
      containers:
      - env:
        - name: ACCEPT_EULA
          value: "Y"
        - name: SA_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mssql-password
              name: mssql-secret
        image: quay.io/ocpmigrate/mssql-server:latest
        imagePullPolicy: Always
        name: mssql
        securityContext:
          privileged: true
        ports:
        - containerPort: 1433
        resources:
          limits:
            memory: "3Gi"
            cpu: "0.5"
          requests:
            memory: "3Gi"
            cpu: "0.5"
        volumeMounts:
        - mountPath: "/var/opt/mssql/data"
          name: mssql-vol
      volumes:
      - name: mssql-vol
        persistentVolumeClaim:
          claimName: mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
 name: mssql-service
 namespace: mssql-persistent
spec:
 selector:
   app: mssql
 ports:
   - protocol: TCP
     port: 1433
     targetPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-app-deployment
  namespace: mssql-persistent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-app
  template:
    metadata:
      labels:
        app: mssql-app
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: mssql-persistent-sa
      containers:
      - name: mssql-app
        image: quay.io/ocpmigrate/mssql-sample-app:microsoft
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        securityContext:
          privileged: true
---
apiVersion: v1
kind: Service
metadata:
 name: mssql-app-service
 namespace: mssql-persistent
spec:
 selector:
   app: mssql-app
 ports:
   - name: "tcp"
     protocol: TCP
     port: 5000
     targetPort: 5000
---
apiVersion: v1
kind: Route
metadata:
  name: mssql-app-route
  namespace: mssql-persistent
spec:
  path: "/"
  to:
    kind: Service
    name: mssql-app-service
